[gd_scene load_steps=8 format=3 uid="uid://d11kilov4ntl3"]

[ext_resource type="PackedScene" uid="uid://po3ho5hiq3g6" path="res://Scenes/wheel.tscn" id="1_lqswb"]
[ext_resource type="Script" path="res://Codes/player.gd" id="1_xs1sp"]
[ext_resource type="Texture2D" uid="uid://c713huubcma6o" path="res://Images/Car/Car.png" id="2_t4ua5"]
[ext_resource type="Texture2D" uid="uid://bq2uyfmbb5gl7" path="res://Images/Characters/Body.png" id="3_3t4s4"]
[ext_resource type="Texture2D" uid="uid://cl1c0u4vfbf4s" path="res://Images/Characters/Head.png" id="4_lho26"]
[ext_resource type="AudioStream" uid="uid://30ga6rke5lqn" path="res://Audio/EngineSound.ogg" id="6_0wkcf"]

[sub_resource type="CircleShape2D" id="CircleShape2D_aqpqx"]
radius = 78.0256

[node name="Player" type="RigidBody2D" groups=["player"]]
collision_layer = 2
gravity_scale = 4.24
script = ExtResource("1_xs1sp")

[node name="WheelHolder" type="PinJoint2D" parent="."]
position = Vector2(-150, 96)
node_a = NodePath("..")
node_b = NodePath("Wheel")
softness = 1.22

[node name="Wheel" parent="WheelHolder" instance=ExtResource("1_lqswb")]

[node name="WheelHolder2" type="PinJoint2D" parent="."]
position = Vector2(112, 96)
node_a = NodePath("..")
node_b = NodePath("Wheel")
softness = 1.22

[node name="Wheel" parent="WheelHolder2" instance=ExtResource("1_lqswb")]

[node name="Body" type="Sprite2D" parent="."]
position = Vector2(-53, -53)
texture = ExtResource("3_3t4s4")

[node name="HeadRigid" type="RigidBody2D" parent="." groups=["player"]]
position = Vector2(-59, -106)
collision_layer = 5

[node name="Head" type="Sprite2D" parent="HeadRigid"]
texture = ExtResource("4_lho26")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HeadRigid"]
shape = SubResource("CircleShape2D_aqpqx")

[node name="NeckJoint" type="PinJoint2D" parent="HeadRigid"]
position = Vector2(3, 58)
node_a = NodePath("..")
node_b = NodePath("../..")
softness = 1.0

[node name="HeadJoint" type="PinJoint2D" parent="HeadRigid"]
node_a = NodePath("..")
node_b = NodePath("../..")
softness = 2.58

[node name="Car" type="Sprite2D" parent="."]
texture = ExtResource("2_t4ua5")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-219, -39, -219, 94, 215, 95, 215, -4, 118, -42, 18, -57, -197, -57)

[node name="GameOverTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="EngineSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_0wkcf")
autoplay = true

[connection signal="timeout" from="GameOverTimer" to="." method="_on_game_over_timer_timeout"]
